[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrise"
version = "0.1.1"
description = "A JAX-first Python successor to the RISE toolbox for regime-switching DSGE models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "PyRISE Development Team", email = "unusedtesting817@gmail.com" }
]
maintainers = [
  { name = "PyRISE Development Team", email = "unusedtesting817@gmail.com" }
]
keywords = ["macroeconomics", "dsge", "regime-switching", "jax", "economics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
  "jax[cpu]>=0.4.0",
  "dynamax>=0.1.0",
  "pandas>=2.0.0",
  "ruamel-yaml>=0.17.0",
  "lark>=1.1.0",
  "sympy>=1.12.0",
  "scipy>=1.11.0",
  "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/pyrise-project/pyrise"
Documentation = "https://pyrise.readthedocs.io"
Repository = "https://github.com/pyrise-project/pyrise"
Issues = "https://github.com/pyrise-project/pyrise/issues"
Changelog = "https://github.com/pyrise-project/pyrise/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrise"]
